--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,24 +5,28 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sorta"
-version = "0.1.1"
+version = "0.1.2"
 description = "A CLI tool to automatically sort PDFs and PPTX files into folders using keyword-based routing."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT" }
 
 authors = [
-  { name = "woterr" }
+    { name = "woterr" }
 ]
 
 dependencies = [
-  "typer>=0.12.0",
-  "rich>=13.7.0"
+    "typer>=0.12.0",
+    "rich>=13.7.0"
 ]
 
 [project.optional-dependencies]
 pdf = [
-  "pypdf>=4.0.0"
+    "pypdf>=4.0.0"
+]
+
+watchdog = [
+    "watchdog>=6.0.0"
 ]
 
 
