--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sorta"
-version = "0.1.2"
+version = "1.0.0"
 description = "A CLI tool to automatically sort PDFs and PPTX files into folders using keyword-based routing."
 readme = "README.md"
 requires-python = ">=3.11"
@@ -36,7 +36,11 @@ sorta = "sorta.main:main"
 
 [tool.setuptools]
 package-dir = {"" = "."}
+include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["sorta*"]
+
+[tool.setuptools.package-data]
+sorta = ["templates/*.toml"]
